force-app/main/default/objects/Demande_Cotation__c/Demande_Cotation__c.object-meta.xml
<CustomObject>
    <label>Demande de cotation</label>
    <nameField>
        <label>Demande de cotation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demandes de cotation</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>