force-app/main/default/objects/Demande_Cotation__c/fields/AA_OwnerName__c.field-meta.xml
<CustomField>
    <fullName>AA_OwnerName__c</fullName>
    <description>Ce champ ne sert qu&apos;aux sharings rules</description>
    <label>AA OwnerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>