force-app/main/default/objects/Demande_Cotation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demandes de cotation</relationshipLabel>
    <relationshipName>Demandes_Cotation</relationshipName>
    <type>Lookup</type>
</CustomField>