force-app/main/default/objects/Demande_Cotation__c/fields/Account_origin__c.field-meta.xml
<CustomField>
    <fullName>Account_origin__c</fullName>
    <formula>Text(Account__r.AccountSource)</formula>
    <label>Origine du compte</label>
    <type>Text</type>
</CustomField>