force-app/main/default/objects/Demande_Cotation__c/fields/CAR_Elec__c.field-meta.xml
<CustomField>
    <fullName>CAR_Elec__c</fullName>
    <label>CAR Elec</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>