force-app/main/default/objects/Demande_Cotation__c/fields/Charge_affaire__c.field-meta.xml
<CustomField>
    <fullName>Charge_affaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chargé d&apos;affaire</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Administrateur Système, Cotation User</value>
        </filterItems>
        <filterItems>
            <field>User.FirstName</field>
            <operation>contains</operation>
            <value>Shai</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Demandes_de_cotation</relationshipName>
    <type>Lookup</type>
</CustomField>