force-app/main/default/objects/Demande_Cotation__c/fields/Concurrence_identifiee__c.field-meta.xml
<CustomField>
    <fullName>Concurrence_identifiee__c</fullName>
    <label>Concurrence identifiée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
            <value>
                <fullName>Ne sais pas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>