force-app/main/default/objects/Demande_Cotation__c/fields/Conformite_E_Attestation__c.field-meta.xml
<CustomField>
    <fullName>Conformite_E_Attestation__c</fullName>
    <formula>Owner:User.Contact.Account.Conformite_E_Attestation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conformité E-Attestation</label>
    <type>Checkbox</type>
</CustomField>