force-app/main/default/objects/Demande_Cotation__c/fields/Date_demande_cotation__c.field-meta.xml
<CustomField>
    <fullName>Date_demande_cotation__c</fullName>
    <label>Date de demande de cotation</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>