force-app/main/default/objects/Demande_Cotation__c/fields/Date_RDV_Client__c.field-meta.xml
<CustomField>
    <fullName>Date_RDV_Client__c</fullName>
    <label>Date RDV Client</label>
    <type>DateTime</type>
</CustomField>