force-app/main/default/objects/Demande_Cotation__c/fields/Date_RDV_reactualisation__c.field-meta.xml
<CustomField>
    <fullName>Date_RDV_reactualisation__c</fullName>
    <description>Date de RDV pour la réactualisation d&apos;un dossier</description>
    <label>Date RDV de réactualisation</label>
    <type>DateTime</type>
</CustomField>