force-app/main/default/objects/Demande_Cotation__c/fields/Duree_offre__c.field-meta.xml
<CustomField>
    <fullName>Duree_offre__c</fullName>
    <label>Durée de l&apos;offre souhaitée</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 mois</fullName>
            </value>
            <value>
                <fullName>24 mois</fullName>
            </value>
            <value>
                <fullName>36 mois</fullName>
            </value>
            <value>
                <fullName>Durée max</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>