force-app/main/default/objects/Demande_Cotation__c/fields/Formula_plus_10_compteurs__c.field-meta.xml
<CustomField>
    <fullName>Formula_plus_10_compteurs__c</fullName>
    <formula>Nombre_PDE__c &gt;= 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plus de 10 compteurs</label>
    <type>Checkbox</type>
</CustomField>