force-app/main/default/objects/Demande_Cotation__c/fields/Fournisseur_signe__c.field-meta.xml
<CustomField>
    <fullName>Fournisseur_signe__c</fullName>
    <label>Fournisseur défendu</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fournisseur</valueSetName>
    </valueSet>
</CustomField>