force-app/main/default/objects/Demande_Cotation__c/fields/Infos_complementaires__c.field-meta.xml
<CustomField>
    <fullName>Infos_complementaires__c</fullName>
    <label>Infos complémentaires</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>