force-app/main/default/objects/Demande_Cotation__c/fields/Infos_reactualisation__c.field-meta.xml
<CustomField>
    <fullName>Infos_reactualisation__c</fullName>
    <label>Infos réactualisation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>