force-app/main/default/objects/Demande_Cotation__c/fields/Marge__c.field-meta.xml
<CustomField>
    <fullName>Marge__c</fullName>
    <label>Rémunération</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>