force-app/main/default/objects/Demande_Cotation__c/fields/Marge_souhaitee__c.field-meta.xml
<CustomField>
    <fullName>Marge_souhaitee__c</fullName>
    <label>Marge souhaitée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marge minimale</fullName>
            </value>
            <value>
                <fullName>Marge moyenne</fullName>
            </value>
            <value>
                <fullName>Marge maximale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>