force-app/main/default/objects/Demande_Cotation__c/fields/Motif_de_refus__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_refus__c</fullName>
    <label>TO DELETE</label>
    <type>TextArea</type>
</CustomField>