force-app/main/default/objects/Demande_Cotation__c/fields/Motif_mise_en_attente__c.field-meta.xml
<CustomField>
    <fullName>Motif_mise_en_attente__c</fullName>
    <label>Motif de mise en attente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projet reporté (déménagement, vente, imprévu)</fullName>
            </value>
            <value>
                <fullName>Client souhaite attendre</fullName>
            </value>
            <value>
                <fullName>Présentation des prix uniquement</fullName>
            </value>
            <value>
                <fullName>Client absent</fullName>
            </value>
            <value>
                <fullName>Client à eu un imprévu</fullName>
            </value>
            <value>
                <fullName>En attente de l’offre concurrente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>