force-app/main/default/objects/Demande_Cotation__c/fields/Motif_perte__c.field-meta.xml
<CustomField>
    <fullName>Motif_perte__c</fullName>
    <label>Motif de perte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractualisation en direct avec un fournisseur proposé</fullName>
            </value>
            <value>
                <fullName>Contractualisation en direct avec un fournisseur non proposé</fullName>
            </value>
            <value>
                <fullName>Contractualisation avec un courtier concurrent</fullName>
            </value>
            <value>
                <fullName>Souhaite rester chez son fournisseur actuel</fullName>
            </value>
            <value>
                <fullName>En attente d’une baisse de marché</fullName>
            </value>
            <value>
                <fullName>Échéance trop lointaine</fullName>
            </value>
            <value>
                <fullName>Projet  annulé (déménagement, vente, imprévu)</fullName>
            </value>
            <value>
                <fullName>Client injoignable</fullName>
            </value>
            <value>
                <fullName>Erreur de données (SIRET, signataire, décisionnaire erroné)</fullName>
            </value>
            <value>
                <fullName>Changement de périmètre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>