force-app/main/default/objects/Demande_Cotation__c/fields/Motif_refus__c.field-meta.xml
<CustomField>
    <fullName>Motif_refus__c</fullName>
    <label>Motif de refus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACD Non conforme</fullName>
            </value>
            <value>
                <fullName>Facture absente ou non conforme</fullName>
            </value>
            <value>
                <fullName>Date d&apos;échéance dépassée</fullName>
            </value>
            <value>
                <fullName>Date d&apos;échéance trop éloigné</fullName>
            </value>
            <value>
                <fullName>Date d&apos;échéance erronée</fullName>
            </value>
            <value>
                <fullName>Notation insuffisante</fullName>
            </value>
            <value>
                <fullName>Compteur particulier</fullName>
            </value>
            <value>
                <fullName>Mauvais compte</fullName>
            </value>
            <value>
                <fullName>Périmètre non conforme</fullName>
            </value>
            <value>
                <fullName>Date de RDV trop proche</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>