force-app/main/default/objects/Demande_Cotation__c/fields/Nombre_PDE__c.field-meta.xml
<CustomField>
    <fullName>Nombre_PDE__c</fullName>
    <label>Nombre de PDE</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>