force-app/main/default/objects/Demande_Cotation__c/fields/Offre_Renouvellement__c.field-meta.xml
<CustomField>
    <fullName>Offre_Renouvellement__c</fullName>
    <label>Offre de renouvellement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>