force-app/main/default/objects/Demande_Cotation__c/fields/Plus_1_Giga__c.field-meta.xml
<CustomField>
    <fullName>Plus_1_Giga__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plus 1 Giga</label>
    <type>Checkbox</type>
</CustomField>