force-app/main/default/objects/Demande_Cotation__c/fields/Signataire__c.field-meta.xml
<CustomField>
    <fullName>Signataire__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Signataire</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Demandes de cotation</relationshipLabel>
    <relationshipName>Demandes_de_cotation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>