force-app/main/default/objects/Demande_Cotation__c/fields/Societe_du_commercial__c.field-meta.xml
<CustomField>
    <fullName>Societe_du_commercial__c</fullName>
    <formula>Owner:User.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Société du commercial</label>
    <type>Text</type>
</CustomField>