force-app/main/default/objects/Demande_Cotation__c/fields/Souhaite_offre_TURPE__c.field-meta.xml
<CustomField>
    <fullName>Souhaite_offre_TURPE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Souhaite offre TURPE</label>
    <type>Checkbox</type>
</CustomField>