force-app/main/default/objects/Demande_Cotation__c/fields/Specificite_offre__c.field-meta.xml
<CustomField>
    <fullName>Specificite_offre__c</fullName>
    <label>Spécificité de l&apos;offre</label>
    <type>TextArea</type>
</CustomField>