force-app/main/default/objects/Demande_Cotation__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente de traitement</fullName>
            </value>
            <value>
                <fullName>Validée</fullName>
            </value>
            <value>
                <fullName>En cours de traitement</fullName>
            </value>
            <value>
                <fullName>Comparatif prêt</fullName>
                <label>Comparatif(s) prêt(s)</label>
            </value>
            <value>
                <fullName>En attente de retour client</fullName>
            </value>
            <value>
                <fullName>Demande de réactualisation</fullName>
            </value>
            <value>
                <fullName>Refusée</fullName>
            </value>
            <value>
                <fullName>Clonée</fullName>
            </value>
            <value>
                <fullName>Perdue</fullName>
                <label>DDC Perdue</label>
            </value>
            <value>
                <fullName>Client Perdu</fullName>
            </value>
            <value>
                <fullName>En attente validation fournisseur</fullName>
            </value>
            <value>
                <fullName>Gagnée</fullName>
            </value>
            <value>
                <fullName>Périmée</fullName>
                <isActive>false</isActive>
                <label>Périmée</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>