force-app/main/default/objects/Demande_Cotation__c/fields/TECH_AA_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>TECH_AA_Account_Name__c</fullName>
    <label>TECH AA Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>