force-app/main/default/objects/Demande_Cotation__c/fields/TECH_AA_OwnerName__c.field-meta.xml
<CustomField>
    <fullName>TECH_AA_OwnerName__c</fullName>
    <formula>Account__r.Parent.Owner.FirstName + &apos; &apos; +  Account__r.Parent.Owner.LastName</formula>
    <label>TECH_AA_OwnerName</label>
    <type>Text</type>
</CustomField>