force-app/main/default/objects/Demande_Cotation__c/fields/TECH_Date_RDV_Reactu__c.field-meta.xml
<CustomField>
    <fullName>TECH_Date_RDV_Reactu__c</fullName>
    <formula>IF(ISNULL(Date_RDV_reactualisation__c),Date_RDV_Client__c,Date_RDV_reactualisation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de RDV ou de réactualisation</label>
    <type>DateTime</type>
</CustomField>