force-app/main/default/objects/Demande_Cotation__c/fields/TECH_Owner_Manger_Mail__c.field-meta.xml
<CustomField>
    <fullName>TECH_Owner_Manger_Mail__c</fullName>
    <label>Manager Mail</label>
    <type>Email</type>
</CustomField>