force-app/main/default/objects/Demande_Cotation__c/fields/TECH_OwnerName__c.field-meta.xml
<CustomField>
    <fullName>TECH_OwnerName__c</fullName>
    <formula>Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_OwnerName</label>
    <type>Text</type>
</CustomField>