force-app/main/default/objects/Demande_Cotation__c/fields/TECH_Partner_OwnerName__c.field-meta.xml
<CustomField>
    <fullName>TECH_Partner_OwnerName__c</fullName>
    <formula>Account__r.Owner.Contact.Owner.FirstName + &apos; &apos; +  Account__r.Owner.Contact.Owner.LastName</formula>
    <label>Directeur partenaire</label>
    <type>Text</type>
</CustomField>