force-app/main/default/objects/Demande_Cotation__c/validationRules/VR_001.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_001</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Statut__c, &apos;Demande de réactualisation&apos;),ISNULL(Date_RDV_reactualisation__c))</errorConditionFormula>
    <errorDisplayField>Date_RDV_reactualisation__c</errorDisplayField>
    <errorMessage>Merci de renseigner une nouvelle date de RDV</errorMessage>
</ValidationRule>