force-app/main/default/objects/Demande_Cotation__c/validationRules/VR_002.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_002</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ischanged(Date_RDV_reactualisation__c),((5 * ( FLOOR( ( DATEVALUE(Date_RDV_reactualisation__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
DATEVALUE(Date_RDV_reactualisation__c) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE(NOW()) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
DATEVALUE(NOW()) - DATE( 1900, 1, 8), 7 ) ) )) &lt; 1)</errorConditionFormula>
    <errorDisplayField>Date_RDV_reactualisation__c</errorDisplayField>
    <errorMessage>Merci de respecter le délais de 24H minimum pour une demande de réactualisation.</errorMessage>
</ValidationRule>