force-app/main/default/objects/Demande_Cotation__c/validationRules/VR_003.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_003</fullName>
    <active>true</active>
    <description>Bloquer les demandes de cotation au statut refusé</description>
    <errorConditionFormula>AND(
   TEXT(PRIORVALUE(Statut__c))  = &quot;Refusée&quot;,
		 NOT(ISCHANGED(CAR_Elec__c)),
			NOT(ISCHANGED(CAR_Gaz__c)),
				NOT(ISCHANGED(Nombre_PDE__c)),
				NOT(ISCHANGED(OwnerId)),
    OR(
        $Profile.Name = &quot;Profil Noureddine&quot;,
        $Profile.Name = &quot;Utilisateur Partenaire Communauté&quot;,
        $Profile.Name = &quot;Commercial&quot;
    )
)</errorConditionFormula>
    <errorMessage>Cette demande de cotation n&apos;est plus modifiable. Merci d&apos;en créer une nouvelle.</errorMessage>
</ValidationRule>