force-app/main/default/objects/Demande_Cotation__c/validationRules/VR_004.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_004</fullName>
    <active>false</active>
    <description>Une demande de cotation cloonée n&apos;est plus modifiable SAUF le propriétaire de la demande de cotation</description>
    <errorConditionFormula>AND(TEXT(PRIORVALUE(Statut__c)) = &quot;Clonée&quot;,NOT(OR(iSCHANGED(OwnerId))))</errorConditionFormula>
    <errorMessage>Cette demande de cotation est verrouillée</errorMessage>
</ValidationRule>