force-app/main/default/objects/Demande_Cotation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_RDV_Client__c</columns>
    <columns>Statut__c</columns>
    <columns>Marge__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes vos demandes de cotation</label>
</ListView>