force-app/main/default/objects/Demande_Cotation__c/listViews/Commercaux_relancer.listView-meta.xml
<ListView>
    <fullName>Commercaux_relancer</fullName>
    <columns>NAME</columns>
    <columns>Charge_affaire__c</columns>
    <columns>Date_RDV_Client__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_RDV_Client__c</field>
        <operation>greaterThan</operation>
        <value>6/1/2023</value>
    </filters>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>En attente de traitement,En cours de traitement,Comparatif prêt</value>
    </filters>
    <filters>
        <field>Date_RDV_Client__c</field>
        <operation>lessThan</operation>
        <value>6/15/2023</value>
    </filters>
    <label>Commerciaux à relancer</label>
    <sharedTo></sharedTo>
</ListView>