force-app/main/default/objects/Demande_Cotation__c/listViews/Mettre_jour_la_date_de_RDV.listView-meta.xml
<ListView>
    <fullName>Mettre_jour_la_date_de_RDV</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Charge_affaire__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Mettre à jour la date de RDV</label>
    <sharedTo></sharedTo>
</ListView>