force-app/main/default/objects/Demande_Cotation__c/listViews/METTRE_LA_MARGE_A_JOUR.listView-meta.xml
<ListView>
    <fullName>METTRE_LA_MARGE_A_JOUR</fullName>
    <columns>NAME</columns>
    <columns>Charge_affaire__c</columns>
    <columns>Date_RDV_Client__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Perdue,Gagnée</value>
    </filters>
    <filters>
        <field>Marge__c</field>
        <operation>equals</operation>
    </filters>
    <label>Mettre la rem à jour</label>
    <sharedTo></sharedTo>
</ListView>